# refiner

./: .gitignore  .prettierignore  LICENSE  README.md  compact-popup.html  index.html  language-analysis.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: linting.yml  publish.yml
src/: language-analysis.tsx  main.tsx  popup.tsx  settings.tsx
src-tauri/: Cargo.toml  tauri.conf copy.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  event_handlers.rs  history.rs  language_analysis.rs  main.rs  mouse_service.rs  selected_text.rs  shortcuts.rs  tray.rs  window_management.rs
src-tauri/src/providers/: base.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs
src/app/: globals.css  greet.tsx  home.tsx  layout.tsx  page.tsx  provider.tsx
src/app/compact-popup/: compact-popup-client.tsx  page.tsx
src/app/components/: theme-toggle.tsx
src/app/providers/: settings.tsx  theme.tsx  translate.tsx
src/app/sections/: bottomBar.tsx  input.tsx  language-selection.tsx  result.tsx  settings.tsx
src/app/selection-icon/: page.tsx
src/app/settings/: page.tsx  settings-client.tsx
src/app/translate-popup/: page.tsx  translate-popup-client.tsx
src/app/types/: settings.ts  tauri.ts  translate.ts
src/components/ui/: button.tsx  input.tsx  select.tsx  skeleton.tsx  switch.tsx  textarea.tsx  tooltip.tsx
src/providers/: settings.tsx  theme.tsx  translate.tsx
src/styles/: globals.css
src/types/: settings.ts  tauri.ts  translate.ts
src/views/: LanguageAnalysisView.tsx  MainView.tsx  PopupView.tsx  SettingsView.tsx
