[package]
name = "refiner"
version = "0.1.0"
description = "The quick and easy way to translate text"
authors = ["leehuwuj <leehuwuj@gmail.com>"]
license = ""
repository = ""
default-run = "refiner"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6.2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-store = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-dialog = "2.3.0"
device_query = "1.1.3"
reqwest = { version = "0.12.5", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase", "winnt", "winnls"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.0"
